# edumedia-explorer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  NewWorkPlan.md  PROJECT_SPEC.md  Procfile  README.md  docker-compose.yml  fly.toml  justfile  project-spec.md  pyproject.toml  render.yaml
app/: bootstrap.py  config.py  db.py  dependencies.py  errors.py  main.py  seed.py  seed_cli.py  sqlite_maintenance.py
app/models/: __init__.py  annotation.py  category.py  media_asset.py  request_log.py  sub_category.py  sub_sub_category.py  subject_page.py
app/repositories/: annotation_repository.py  category_repository.py  media_repository.py  page_repository.py  sub_category_repository.py  sub_sub_category_repository.py
app/routes/: web.py
app/schemas/: annotation.py  category.py  common.py  media_asset.py  sub_category.py  sub_sub_category.py  subject_page.py
app/services/: annotation_service.py  category_service.py  content_registry.py  hierarchy.py  media_service.py  page_service.py  render_service.py  sub_category_service.py  sub_sub_category_service.py
app/templates/: base.html  editor_dashboard.html  editor_new.html  editor_page.html  index.html  landing.html  page_view.html
tests/: conftest.py  test_annotations_api.py  test_categories_api.py  test_content_api.py  test_db_url.py  test_health.py  test_home.py  test_preview_api.py  test_sub_categories_api.py  test_subject_pages_api.py  test_tracker.py
tracker/: api-contracts.md  backlog.md  current-state.md  decisions.md  handoff.md  project-brief.md  qa-checklist.md  session-log.md
(+29 files in other folders)
